--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel_test
+DB_DATABASE=laravel_testlogin
 DB_USERNAME=root
-DB_PASSWORD=root_password
+DB_PASSWORD=
 
 DB_TEST_CONNECTION=testing
 DB_TEST_HOST=127.0.0.1
